<resources>
    <string name="app_name">Calculadora PDM 2020 2</string>
    <string name="clear">Limpar</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="minus">-</string>
    <string name="sum">+</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="settings">Configurações</string>
    <string name="exit">Sair</string>
    <string name="calculator_type">Tipo de Calculadora</string>
    <string name="advanced">Avançada</string>
    <string name="basic">Básica</string>
    <string name="save">Salvar</string>
</resources>