<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/calculatorTypeTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculator_type"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/calculatorTypeRg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorTypeTv">

        <RadioButton
            android:id="@+id/advancedRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced" />
        <RadioButton
            android:id="@+id/basicRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basic" />
    </RadioGroup>

    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculatorTypeRg"
        android:onClick="saveSettings"
        android:text="@string/save" />

</androidx.constraintlayout.widget.ConstraintLayout>